force-app/main/default/objects/Turn_Around_Time__c/Turn_Around_Time__c.object-meta.xml
<CustomObject>
    <label>Turn Around Time</label>
    <nameField>
        <displayFormat>TAT-{000000}</displayFormat>
        <label>Turn Around Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Turn Around Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>