force-app/main/default/objects/Turn_Around_Time__c/fields/Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date__c</fullName>
    <formula>BLANKVALUE( End_Date__c , NOW()  )</formula>
    <label>Actual Date</label>
    <type>DateTime</type>
</CustomField>