force-app/main/default/objects/Turn_Around_Time__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Turn Around Time</relationshipLabel>
    <relationshipName>Turn_Around_Time</relationshipName>
    <type>Lookup</type>
</CustomField>