force-app/main/default/objects/Turn_Around_Time__c/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <label>Previous Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>