force-app/main/default/objects/Turn_Around_Time__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <formula>IF(
Actual_Date__c - Start_Date__c &gt; 0 ,
TEXT( FLOOR( Actual_Date__c - Start_Date__c ) ) &amp; &quot; days &quot;
&amp; TEXT( FLOOR( MOD( (Actual_Date__c - Start_Date__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
&amp; TEXT( ROUND( MOD( (Actual_Date__c - Start_Date__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
&quot;&quot;
)</formula>
    <label>Time Spent</label>
    <type>Text</type>
</CustomField>