force-app/main/default/objects/Turn_Around_Time__c/fields/Time_Spent_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_in_Minutes__c</fullName>
    <formula>(Actual_Date__c -  Start_Date__c)*24*60</formula>
    <label>Time Spent in Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>