force-app/main/default/objects/Turn_Around_Time__c/fields/Unique_String__c.field-meta.xml
<CustomField>
    <fullName>Unique_String__c</fullName>
    <label>Unique String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>